fixed spacing of elements

--- a/style.css
+++ b/style.css
@@ -260,8 +260,9 @@ body[data-state="S4"] #nav-toggle {
     background-color: rgba(130 236 236 /.5);
 }
 
+
 /* Image track container */
-.image-track {
+#film {
     pointer-events: auto;
     cursor: pointer;
     display: flex;
@@ -272,11 +273,11 @@ body[data-state="S4"] #nav-toggle {
     bottom: -63vh;
     height: 63vh;
     user-select: none; /* Prevent image highlighting */
-    transition: bottom 1200ms cubic-bezier(.83, .3, .38, .97);
+    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97);
 }
 
 /* Images inside image track */
-.image-track .image {
+.filmImage {
     width: 37vh;
     height: 63vh;
     object-fit: cover;
@@ -284,14 +285,71 @@ body[data-state="S4"] #nav-toggle {
     pointer-events: auto;
 }
 
+#info {
+    pointer-events: none;
+    cursor: pointer;
+    display: flex;
+    gap: 10vmin; /* spacing between inner parts */
+    position: fixed;
+    z-index: 3;
+    bottom: -65vh;
+    height: 65vh;
+    justify-content: space-around;
+    object-position: center;
+    width: 100%;
+    user-select: none; /* Prevent image highlighting */
+    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97);
+}
+
+/* Image track container */
+#projects {
+    display: flex;
+    gap: 10vmin; /* spacing between inner parts */
+    position: fixed;
+    z-index: 3;
+    bottom: -65vh;
+    height: 65vh;
+    justify-content: space-around;
+    object-position: center;
+    width: 100%;
+    overflow-x: scroll;
+    user-select: none; /* Prevent image highlighting */
+    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97);
+}
+
+/* Images inside image track */
+.projectImage {
+    cursor: default;
+    object-position: 100% center;
+    object-fit: contain;
+    left: 50%;
+    pointer-events: auto;
+    max-width: 30vh;
+    max-height: 100%;
+    overflow: hidden;
+}
+
+
+/* Images inside image track */
+.infoImage {
+    cursor: default;
+    object-position: 100% center;
+    object-fit: contain;
+    left: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+}
+
 /* Project link + Image container */
 .image-container {
-    display: flex;
-    height: 63vh;
-    flex-direction: column;
+    object-fit: contain;
+    display: inline-flex;
     align-items: center;
-    gap: 2vmin;
+    flex-direction: column;
+    gap: 3vmin;
     position: relative;
+
 }
 
 /* Link under projects */
@@ -302,6 +360,8 @@ body[data-state="S4"] #nav-toggle {
     letter-spacing: .5px;
     color: white;
     font-size: clamp(20px, 2vmin, 4vmin);
+        pointer-events: auto;
+
 }
 
 /* Project link + Image container */
@@ -309,12 +369,14 @@ body[data-state="S4"] #nav-toggle {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 2vmin;
+    gap: 5vmin;
     position: relative;
 }
 
 /* Links under info */
 .social {
+    pointer-events: auto;
+
     font-family: Avenir, sans-serif;
     font-style: italic;
     font-weight: lighter;
@@ -322,13 +384,30 @@ body[data-state="S4"] #nav-toggle {
     font-size: clamp(20px, 1vmin, 4vmin);
 }
 
+
 /* IMAGE TRACK ANIMATIONS */
 /* up to center on 3, down a bit on 4 */
-body[data-state="S3"] .image-track {
+body[data-state="S3"] #film {
     bottom: calc(45vh - 31.5vh);
 }
 
-body[data-state="S4"] .image-track {
+body[data-state="S4"] #film {
+    bottom: calc(25vh - 31.5vh);
+}
+
+body[data-state="S3"] #projects {
+    bottom: calc(45vh - 31.5vh);
+}
+
+body[data-state="S4"] #projects {
+    bottom: calc(25vh - 31.5vh);
+}
+
+body[data-state="S3"] #info {
+    bottom: calc(45vh - 31.5vh);
+}
+
+body[data-state="S4"] #info {
     bottom: calc(25vh - 31.5vh);
 }
 
